# generaattori

./: .gitignore  CMakeLists.txt  README.MD
include/generaattori/cpp/: cu.h  tokens.h
src/cpp/: cpp2h.cpp
src/documentation/: generaattori.tex
src/resources/: cpp-tokens.tsv
src/test/: cpp_cu_h_tests.cpp
